Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_springboot-azure.yml
+++ b/.github/workflows/master_springboot-azure.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - SpringBoot-Azure
+name: Build and deploy JAR app to Azure Web App - springboot-azure
 
 on:
   push:
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'SpringBoot-Azure'
+          app-name: 'springboot-azure'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8737749403E84DCCB407369027B73CD8 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3B282E2220C143829BDA50A17116A305 }}
           package: '*.jar'
